até a parte 4 do video

--- a/index.html
+++ b/index.html
@@ -7,14 +7,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class= "conteúdo-principal">
+    <section class="conteudo-principal">
         <h2 class= "titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+        <div class="conteudo">
         <div class="botoes">
-            <button class="botão">Cursos da Alura</button>
-            <button class="botão">Criar projetos em Javascript</button>
-            <button class="botão">Criar um portifólio</button>
-            <button class="botão">Atualizar meu curriculo</button>
+            <button class="botao ativo">Cursos na Alura</button>
+            <button class="botao">Criar projetos em Javascript</button>
+            <button class="botao">Criar um portfolio</button>
+            <button class="botao">Atualizar meu currículo</button>
         </div>
+        <div class="abas-textos">
+            <div class="aba-conteudo ativo">
+                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            </div>
+        </div>
+    </div>
     </section>
-</body>
-</html>
+    <script src="main.js"></script>
