--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
+        <h2 class="titulo-principal"><span>_</span>Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Cursos na Alura</button>
