--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2 class="titulo-principal"><span>_</span>Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Cursos na Alura</button>
+                <button class="botao ativo"><span>_</span>Cursos na Alura<span>_</span></button>
                 <button class="botao">Criar projetos em Javascript</button>
                 <button class="botao">Criar um portfolio</button>
                 <button class="botao">Atualizar meu currículo</button>
