--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
         </div>
     </section>
     <script src="main.js"></script>
+</div>
+</footer>
 </body>
-
+    <p style="color:green;"> Feito por: Rafael</p>
+    <p style="color:green;"> E-mail: <a style="color:goldenrod;" href="mailto:rafael.assis.santos@escola.pr.gov.br">rafael.assis.santos@escola.pr.gov.br</a> </p>
+    </footer>
 </html>
