--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="aba-conteudo">
+                <div class="aba-conteudo"><span>_</span></div>
                     <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
@@ -81,7 +81,7 @@
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="seg2"></p>
-                            <p class="contador-digito-texto">seg</p>
+                            <p class="contador-digito-texto">seg</p><span>_</span></div>
                         </div>
                     </div>
                 </div>
@@ -89,6 +89,10 @@
                     <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
+                    </div>
+                </div>
+            </div>
+            <div class="aba-conteudo"><span>_</span></div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias3"></p>
                             <p class="contador-digito-texto">dias</p>
@@ -107,9 +111,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="aba-conteudo"><span>_</span></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <script src="main.js"></script>
 </div>
 </html>
+<span>_</span></
