--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal"><span>_</span>Meus objetivos do ano<span>_</span></h2>
+        <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Cursos na Alura</button>
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="aba-conteudo"><span>_</span></div>
+                <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
@@ -81,7 +81,7 @@
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="seg2"></p>
-                            <p class="contador-digito-texto">seg</p><span>_</span></div>
+                            <p class="contador-digito-texto">seg</p>
                         </div>
                     </div>
                 </div>
@@ -89,10 +89,6 @@
                     <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
-                    </div>
-                </div>
-            </div>
-            <div class="aba-conteudo"><span>_</span></div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias3"></p>
                             <p class="contador-digito-texto">dias</p>
@@ -111,14 +107,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="aba-conteudo"><span>_</span></div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
     <script src="main.js"></script>
-</div>
+</body>
+
 </html>
-<span>_</span></
