--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <section class="conteudo-principal">
-        <h2 class="titulo-principal color:green;"><span>__</span>Meus objetivos do ano<span>__</span></h2>
+    <section class="conteudo-principal color:green;">
+        <h2 class="titulo-principal"><span>__</span>Meus objetivos do ano<span>__</span></h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Cursos na Alura</button>
